syntax = "proto3";

package event;
option go_package = "./;event_pb";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty);
  rpc ListEventsByDay(ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByWeek(ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByMonth(ListEventsRequest) returns (ListEventsResponse);
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp date = 3;
  google.protobuf.Duration duration = 4;
  string description = 5;
  int64 user_id = 6;
  google.protobuf.Duration notification_interval = 7;
}

message CreateEventRequest {
  string title = 1;
  google.protobuf.Timestamp date = 2;
  google.protobuf.Duration duration = 3;
  string description = 4;
  int64 user_id = 5;
  google.protobuf.Duration notification_interval = 6;
}

message CreateEventResponse {
  string id = 1;
}

message UpdateEventRequest {
  Event event = 1;
}

message UpdateEventResponse {
  Event event = 1;
}

message DeleteEventRequest {
  string id = 1;
}

message ListEventsRequest {
  google.protobuf.Timestamp date = 1;
}

message ListEventsResponse {
  repeated Event events = 1;
}



